# bp-gbp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
sim/: CMakeLists.txt  sim.cpp  sim.sh  sim_KL.cpp  sim_KL_nonCSS.cpp  sim_KL_repeatw.cpp  sim_KLll.cpp  sim_alpha.cpp  sim_bp2.sh  sim_bp4.sh  sim_combs.cpp  sim_gbp_pp.sh  sim_gbp_pp_cw.sh  sim_gf2.cpp  sim_lgap.sh  sim_rir.sh  sim_rir_qec.sh  sim_rr.sh  sim_rr_4vsn4.sh  sim_rr_alpha.sh  sim_rr_pp_4c.sh  sim_rr_qec.sh  sim_rr_type.sh  sim_rr_w.sh  sim_surface.sh  sim_surface_alpha.sh  sim_surface_w.sh  sim_w.cpp  sim_w_bp.cpp
sim/input/codes/: hgp_mkmn_16_4_6_hx.npy  hgp_mkmn_16_4_6_hz.npy  surface_3_hz.npy
sim/input/codes/luw/luw_regular_2_4_32_2707_175244/: luw_regular_2_4_32_2707_175244_hx.alist  luw_regular_2_4_32_2707_175244_hx.npy  luw_regular_2_4_32_2707_175244_hz.alist  luw_regular_2_4_32_2707_175244_hz.npy
sim/input/codes/random_irregular/rir_3_4_16_0/: rir_3_4_16_0_hx.alist  rir_3_4_16_0_hx.npy  rir_3_4_16_0_hz.alist  rir_3_4_16_0_hz.npy
sim/input/codes/random_irregular/rir_3_4_16_1/: rir_3_4_16_1_hx.alist  rir_3_4_16_1_hx.npy  rir_3_4_16_1_hz.alist  rir_3_4_16_1_hz.npy
sim/input/codes/random_irregular/rir_3_4_20_0/: rir_3_4_20_0_hx.alist  rir_3_4_20_0_hx.npy  rir_3_4_20_0_hz.alist  rir_3_4_20_0_hz.npy
sim/input/codes/random_irregular/rir_3_4_20_1/: rir_3_4_20_1_hx.alist  rir_3_4_20_1_hx.npy  rir_3_4_20_1_hz.alist  rir_3_4_20_1_hz.npy
sim/input/codes/random_regular/no_4cycles/rr_3_4_16_0/: rr_3_4_16_0_hx.alist  rr_3_4_16_0_hx.npy  rr_3_4_16_0_hz.alist  rr_3_4_16_0_hz.npy
sim/input/codes/random_regular/no_4cycles/rr_3_4_16_1/: rr_3_4_16_1_hx.alist  rr_3_4_16_1_hx.npy  rr_3_4_16_1_hz.alist  rr_3_4_16_1_hz.npy
sim/input/codes/random_regular/no_4cycles/rr_3_4_16_2/: rr_3_4_16_2_hx.alist  rr_3_4_16_2_hx.npy  rr_3_4_16_2_hz.alist  rr_3_4_16_2_hz.npy
sim/input/codes/random_regular/no_4cycles/rr_3_4_16_4/: rr_3_4_16_4_hx.alist  rr_3_4_16_4_hx.npy  (+2 more)
sim/input/codes/random_regular/rr_3_4_16_4c/: rr_3_4_16_4c_hx.alist  rr_3_4_16_4c_hx.npy  rr_3_4_16_4c_hz.alist  rr_3_4_16_4c_hz.npy
sim/input/codes/rotatedHGPrep/rotatedHGPrep_3/: rotatedHGPrep_3_hx.alist  rotatedHGPrep_3_hx.npy  rotatedHGPrep_3_hz.alist  rotatedHGPrep_3_hz.npy
sim/input/codes/rotatedHGPrep/rotatedHGPrep_5/: rotatedHGPrep_5_hx.alist  rotatedHGPrep_5_hx.npy  rotatedHGPrep_5_hz.alist  rotatedHGPrep_5_hz.npy
sim/input/codes/rotatedHGPrep/rotatedHGPrep_7/: rotatedHGPrep_7_hx.alist  rotatedHGPrep_7_hx.npy  rotatedHGPrep_7_hz.alist  rotatedHGPrep_7_hz.npy
sim/input/codes/surface/: surface_11_hx.npy  surface_11_hz.npy  surface_3_hx.npy  surface_5_hx.npy  surface_5_hz.npy  surface_5_new_hx.npy  surface_5_new_hz.npy  surface_7_hx.npy  surface_7_hz.npy  surface_9_hx.npy  surface_9_hz.npy
sim/input/codes/test/: repetition_hx.npy  repetition_loop_hz.npy  steane_hx.npy  test_hx.npy  test_hz.npy  testbase_hx.npy
sim/input/codes/xzzx/: XZZX_11  XZZX_11_hx.npy  XZZX_11_hz.npy  XZZX_13  XZZX_13_hx.npy  XZZX_13_hz.npy  XZZX_15  XZZX_15_hx.npy  XZZX_15_hz.npy  XZZX_17  XZZX_3  XZZX_3_hx.npy  XZZX_3_hz.npy  XZZX_5  XZZX_5_hx.npy  XZZX_5_hz.npy  XZZX_7  XZZX_7_hx.npy  XZZX_7_hz.npy  XZZX_9  XZZX_9_hx.npy  XZZX_9_hz.npy
sim/input/input_files/: input_0.json  input_test.json  input_test2.json
sim/input/input_files/rir_qec/: input_rir_qec_0.json  input_rir_qec_1.json
sim/input/input_files/rr/: input_rr_0.json  input_rr_1.json  input_rr_2.json  input_rr_3.json  sim_rr.sh
sim/input/input_files/rr_56/: input_rr_56_4.json  input_rr_56_6.json  input_rr_56_8.json  sim_rr_56.sh
sim/input/input_files/rr_alpha/: input_rr_alpha_0.json  input_rr_alpha_1.json  input_rr_alpha_2.json  input_rr_alpha_3.json
sim/input/input_files/rr_biased/: input_rr_biased_0.json  input_rr_biased_1.json  input_rr_biased_2.json  input_rr_biased_3.json  sim_rr_biased.sh
sim/input/input_files/rr_pp/: input_rr_pp_0.json  input_rr_pp_1.json  input_rr_pp_2.json  input_rr_pp_3.json  sim_rr_pp.sh
sim/input/input_files/rr_pp_4c/: input_rr_pp_4c_1.json  input_rr_pp_4c_2.json  input_rr_pp_4c_3.json  input_rr_pp_4c_4.json
sim/input/input_files/rr_pp_cpr/: input_rr_pp_cpr_2.json  input_rr_pp_cpr_3.json  input_rr_pp_cpr_4.json  input_rr_pp_cpr_5.json  sim_rr_pp_cw.sh
sim/input/input_files/rr_pp_cw/: input_rr_pp_cw_0.json  input_rr_pp_cw_1.json  sim_rr_pp_cw.sh
sim/input/input_files/rr_pp_w/: input_rr_pp_w_0.json  input_rr_pp_w_1.json  input_rr_pp_w_2.json  input_rr_pp_w_3.json  input_rr_pp_w_4.json  sim_rr_pp_w.sh
sim/input/input_files/rr_qec/: input_rr_qec_0.json  input_rr_qec_1.json  input_rr_qec_2.json  input_rr_qec_3.json
sim/input/input_files/rr_w/: input_rr_w_0.json  input_rr_w_1.json  input_rr_w_2.json  input_rr_w_3.json
sim/input/input_files/surface/: input_surface_3.json  input_surface_5.json  input_surface_7.json  input_surface_9.json
sim/input/input_files/surface_alpha/: input_surface_alpha_3.json  input_surface_alpha_5.json  input_surface_alpha_7.json  input_surface_alpha_9.json
sim/input/input_files/surface_gbp/: input_surface_gbp_11.json  input_surface_gbp_3.json  input_surface_gbp_5.json  input_surface_gbp_7.json  input_surface_gbp_9.json  sim_surface_gbp.sh
sim/input/input_files/surface_pp/: input_surface_pp_11.json  input_surface_pp_3.json  input_surface_pp_5.json  input_surface_pp_7.json  input_surface_pp_9.json  sim_surface_pp.sh
sim/input/input_files/surface_qec/: input_surface_qec_3.json  input_surface_qec_5.json  input_surface_qec_7.json  input_surface_qec_9.json  sim_surface_qec.sh
sim/input/input_files/surface_w/: input_surface_w_3.json  input_surface_w_5.json  input_surface_w_7.json  input_surface_w_9.json
sim/input/input_files/xzzx/: input_xzzx_11.json  input_xzzx_13.json  input_xzzx_3.json  input_xzzx_5.json  input_xzzx_7.json  input_xzzx_9.json  sim_xzzx.sh
sim/output/tmp/: input_test.json
sim/tools/: alist_to_npy.py  codes.py  plot.py
src/: CMakeLists.txt  constructor_gbp.cpp  decoder_bp.cpp  decoder_bp2.cpp  decoder_bp_klm.cpp  decoder_bp_kuolai.cpp  decoder_gbp.cpp  error_channels.cpp  io_tools.cpp  la_tools.cpp  timing.cpp
(+53 files in other folders)
